src/sfdc/base/main/default/objects/Contact/fields/FB_AssignedOutlet__c.field-meta.xml
<CustomField>
    <fullName>FB_AssignedOutlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stammfiliale</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Personen zu diesem Account als Stammfiliale</relationshipLabel>
    <relationshipName>FB_AssignedOutlet</relationshipName>
    <type>Lookup</type>
</CustomField>