src/sfdc/base/main/default/objects/Contact/fields/FB_AssignedOutlet_No__c.field-meta.xml
<CustomField>
    <fullName>FB_AssignedOutlet_No__c</fullName>
    <label>Stammfiliale - Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>