src/sfdc/base/main/default/objects/Contact/fields/FB_CDM_Matching_Value__c.field-meta.xml
<CustomField>
    <fullName>FB_CDM_Matching_Value__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(FirstName)),
NOT(ISBLANK(LastName)),
NOT(ISBLANK(Birthdate))
),
FirstName &amp; &apos;/&apos; &amp; LastName &amp; &apos;/&apos; &amp; TEXT(Birthdate),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDM Matching Value</label>
    <type>Text</type>
</CustomField>