src/sfdc/base/main/default/objects/Contact/fields/FB_CDM_Third_Matching_Value__c.field-meta.xml
<CustomField>
    <fullName>FB_CDM_Third_Matching_Value__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(FB_ProfileAddressStreet__c)),
NOT(ISBLANK(FB_ProfileAddressPostalcode__c)),
NOT(ISBLANK(Birthdate))
),
TEXT(Birthdate) &amp; &apos;/&apos; &amp; FB_ProfileAddressPostalcode__c &amp; LEFT(FB_ProfileAddressStreet__c, 5),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDM Third Matching Value</label>
    <type>Text</type>
</CustomField>