src/sfdc/base/main/default/objects/Contact/fields/FB_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>FB_CompanyName__c</fullName>
    <label>Firma Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>