src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerNo_Amazon__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerNo_Amazon__c</fullName>
    <label>Kundennummer Amazon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>