src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerNo_CDM_Idkunde__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerNo_CDM_Idkunde__c</fullName>
    <label>Kundennummer CDM (Idkunde)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>