src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerNo_CDM_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerNo_CDM_SF_Id__c</fullName>
    <label>Kundennummer CDM (SF-Id)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>