src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerNo_Ebay__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerNo_Ebay__c</fullName>
    <label>Kundennummer Ebay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>