src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerNo_Shopware__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerNo_Shopware__c</fullName>
    <label>Kundennummer Shopware (customernumber)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>