src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerNo_Shopware_SFId__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerNo_Shopware_SFId__c</fullName>
    <label>Kundennummer Shopware (SF-Id)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>