src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerNo_Shopware_SWId__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerNo_Shopware_SWId__c</fullName>
    <label>Kundennummer Shopware (SW-Id)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>