src/sfdc/base/main/default/objects/Contact/fields/FB_CustomerType__c.field-meta.xml
<CustomField>
    <fullName>FB_CustomerType__c</fullName>
    <label>Kunde Typ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRIVATE</fullName>
            </value>
            <value>
                <fullName>COMPANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>