src/sfdc/base/main/default/objects/Contact/fields/FB_HashedOldPassword__c.field-meta.xml
<CustomField>
    <fullName>FB_HashedOldPassword__c</fullName>
    <label>Password Hash (Migration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>