src/sfdc/base/main/default/objects/Contact/fields/FB_LoyaltyProgramMemberCounter__c.field-meta.xml
<CustomField>
    <fullName>FB_LoyaltyProgramMemberCounter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LoyaltyProgramMember Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>