src/sfdc/base/main/default/objects/Contact/fields/FB_NewCardNumber__c.field-meta.xml
<CustomField>
    <fullName>FB_NewCardNumber__c</fullName>
    <label>Neue Karte Nummer (Bring-In)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>