src/sfdc/base/main/default/objects/Contact/fields/FB_NewCardRequest__c.field-meta.xml
<CustomField>
    <fullName>FB_NewCardRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neue Karte angefordert</label>
    <type>Checkbox</type>
</CustomField>