src/sfdc/base/main/default/objects/Contact/fields/FB_OldPasswordEncoder__c.field-meta.xml
<CustomField>
    <fullName>FB_OldPasswordEncoder__c</fullName>
    <label>Passwort Encoder (Migration)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bcrypt</fullName>
            </value>
            <value>
                <fullName>md5</fullName>
            </value>
            <value>
                <fullName>sha256</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>