src/sfdc/base/main/default/objects/Contact/fields/FB_PimaryCard__c.field-meta.xml
<CustomField>
    <fullName>FB_PimaryCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Karte (Primär)</label>
    <referenceTo>FB_LoyaltyCard__c</referenceTo>
    <relationshipLabel>Personen zu dieser Macherkarte als Primäre Karte</relationshipLabel>
    <relationshipName>FB_PimaryCard</relationshipName>
    <type>Lookup</type>
</CustomField>