src/sfdc/base/main/default/objects/Contact/fields/FB_PrimaryCard_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FB_PrimaryCard_CreatedDate__c</fullName>
    <label>Karte (Primär) - Erstelldatum</label>
    <type>Date</type>
</CustomField>