src/sfdc/base/main/default/objects/Contact/fields/FB_PrimaryCard_No__c.field-meta.xml
<CustomField>
    <fullName>FB_PrimaryCard_No__c</fullName>
    <label>Karte (Primär) - Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>