src/sfdc/base/main/default/objects/Contact/fields/FB_PrimaryCard_Type__c.field-meta.xml
<CustomField>
    <fullName>FB_PrimaryCard_Type__c</fullName>
    <label>Karte (Primär) - Typ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>128</fullName>
            </value>
            <value>
                <fullName>129</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>131</fullName>
            </value>
            <value>
                <fullName>132</fullName>
            </value>
            <value>
                <fullName>133</fullName>
            </value>
            <value>
                <fullName>134</fullName>
            </value>
            <value>
                <fullName>135</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>