src/sfdc/base/main/default/objects/Contact/fields/FB_ProfileAddressAddOn__c.field-meta.xml
<CustomField>
    <fullName>FB_ProfileAddressAddOn__c</fullName>
    <label>Profil Adresse - Adresszusatz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>