src/sfdc/base/main/default/objects/Contact/fields/FB_ProfileAddressCity__c.field-meta.xml
<CustomField>
    <fullName>FB_ProfileAddressCity__c</fullName>
    <label>Profil Adresse - Stadt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>