src/sfdc/base/main/default/objects/Contact/fields/FB_ProfileAddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>FB_ProfileAddressCountryCode__c</fullName>
    <label>Profil Adresse - Land</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FB_CountryCode</valueSetName>
    </valueSet>
</CustomField>