src/sfdc/base/main/default/objects/Contact/fields/FB_ProfileAddressPostalcode__c.field-meta.xml
<CustomField>
    <fullName>FB_ProfileAddressPostalcode__c</fullName>
    <label>Profil Adresse - Postleitzahl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>