src/sfdc/base/main/default/objects/Contact/fields/FB_ProfileAddressStateCode__c.field-meta.xml
<CustomField>
    <fullName>FB_ProfileAddressStateCode__c</fullName>
    <label>Profil Adresse - Bundesland</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FB_ProfileAddressCountryCode__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>FB_StateCode</valueSetName>
    </valueSet>
</CustomField>