src/sfdc/base/main/default/objects/Contact/fields/FB_ProfileAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>FB_ProfileAddressStreet__c</fullName>
    <label>Profil Adresse - Straße</label>
    <length>255</length>
    <type>Text</type>
</CustomField>