src/sfdc/base/main/default/objects/Contact/fields/FB_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>FB_Registration_Status__c</fullName>
    <label>Registrierung Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>REGISTERED</fullName>
            </value>
            <value>
                <fullName>CONFIRMED</fullName>
            </value>
            <value>
                <fullName>ACTICE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>