src/sfdc/base/main/default/objects/Contact/fields/FB_Saluation_API__c.field-meta.xml
<CustomField>
    <fullName>FB_Saluation_API__c</fullName>
    <formula>Text(Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saluation API (Helper)</label>
    <type>Text</type>
</CustomField>