src/sfdc/base/main/default/objects/Contact/fields/FISH_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>FISH_Birthdate__c</fullName>
    <label>ZZ Geburtstag (Text) (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>