src/sfdc/base/main/default/objects/Contact/fields/FISH_CrmId__c.field-meta.xml
<CustomField>
    <fullName>FISH_CrmId__c</fullName>
    <label>CRM Id (F42)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>