src/sfdc/base/main/default/objects/Contact/fields/FISH_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FISH_ExternalId__c</fullName>
    <label>External ID (F42)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>